user/deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  selector:
    matchLabels:
      app: user
  replicas: 1
  template:
    metadata:
      name: user
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: docker.io/k03147/user
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 10004
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi
---
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - name: user
      port: 10005
      targetPort: 10004
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: user.165.192.105.60.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: user
                port: 
                  number: 10004
